QA_Ipreo/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS UNIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESG - SRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Tier (1,2,3)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Region (AMER, EUR, APAC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dataset (Contacts or Ownership)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debt_Issue_Size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debt Issue Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_on_Product_Code__c</fullName>
        <label>Dependent on Product Code</label>
        <picklist>
            <picklistValues>
                <fullName>BDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Product_Code__c</fullName>
        <label>Finance Product Code</label>
        <picklist>
            <picklistValues>
                <fullName>BDA - DV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDCG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDE - DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDFI - DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDIRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSP - FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Product_Group_Code__c</fullName>
        <label>Finance Product Group Code</label>
        <picklist>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDCG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESG - SRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRISM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Calls_Dialer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No. of Calls (Dialer)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Certificates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No. of Certificates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Conferences__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No. of Conferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Deals_Transaction_Volumes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No. of Deals (Transaction Volumes)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Meetings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No. of Meetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No. of Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No. of Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pass_Through_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass Through Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Implementation_UAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Implementation (UAT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACV/TRANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seat_Fee_No_of_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seat Fee (No. of Users)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_License_Per_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Where users are located and where we want to allocate the revenue.</description>
        <label>Site License (Per Region)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subgroup__c</fullName>
        <label>Subgroup</label>
        <picklist>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESG - SRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>GMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Order_Queue__c</fullName>
        <label>Work Order Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation - Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation - Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation - iCompliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation - Munis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation - RS&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation - RSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation - VR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - BENE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - CMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - EDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - ESG - SRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - FIID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - GMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - GMI+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - NOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - PERC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - PROX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - SID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - SIDND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - SMAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - SMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - SOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - TARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project - Webcast - RESALE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provision - BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provision - Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provision - Equity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type_Default__c</fullName>
        <inlineHelpText>Determines the record type for the work order being created from this product.
If this value is blank, then no work order will be created.</inlineHelpText>
        <label>Work Order Type Default</label>
        <picklist>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Order_on_Renewal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Work Order on Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workday_Group__c</fullName>
        <label>Workday Group</label>
        <picklist>
            <picklistValues>
                <fullName>BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUYSIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQUITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESG - SRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIXED INCOME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUNICIPAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRISM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Revenue_Type__c</columns>
        <columns>Vertical__c</columns>
        <columns>Asset__c</columns>
        <columns>Pass_Through_Required__c</columns>
        <columns>Data_Region__c</columns>
        <columns>Dataset__c</columns>
        <columns>Software__c</columns>
        <columns>Seat_Fee_No_of_Users__c</columns>
        <columns>Site_License_Per_Region__c</columns>
        <columns>Work_Order_Type_Default__c</columns>
        <columns>Work_Order_Queue__c</columns>
        <columns>Finance_Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>AllProductsCodes</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Vertical__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Subgroup__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Finance_Product_Code__c</columns>
        <columns>Finance_Product_Group_Code__c</columns>
        <columns>Revenue_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products Codes</label>
    </listViews>
    <listViews>
        <fullName>AllProductsCorp</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Revenue_Type__c</columns>
        <columns>Vertical__c</columns>
        <columns>Asset__c</columns>
        <columns>Pass_Through_Required__c</columns>
        <columns>Data_Region__c</columns>
        <columns>Dataset__c</columns>
        <columns>Software__c</columns>
        <columns>Seat_Fee_No_of_Users__c</columns>
        <columns>Site_License_Per_Region__c</columns>
        <columns>Work_Order_Type_Default__c</columns>
        <columns>Work_Order_Queue__c</columns>
        <columns>Finance_Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Vertical__c</field>
            <operation>contains</operation>
            <value>corp</value>
        </filters>
        <label>All Products Corp</label>
    </listViews>
    <listViews>
        <fullName>AllProjProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Revenue_Type__c</columns>
        <columns>Vertical__c</columns>
        <columns>Work_Order_Type_Default__c</columns>
        <columns>Work_Order_Queue__c</columns>
        <columns>Asset__c</columns>
        <columns>Pass_Through_Required__c</columns>
        <columns>Data_Region__c</columns>
        <columns>Dataset__c</columns>
        <columns>Software__c</columns>
        <columns>Seat_Fee_No_of_Users__c</columns>
        <columns>Site_License_Per_Region__c</columns>
        <columns>Finance_Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Revenue_Type__c</field>
            <operation>equals</operation>
            <value>PROJ</value>
        </filters>
        <label>All Proj Products</label>
    </listViews>
</CustomObject>